add skuCode, exception handling and validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username=stcomprodadmin
 spring.datasource.password=admin$123
 
 server.port=8090
+
+server.error.include-exception=false
+server.error.include-message=never
+server.error.include-stacktrace=never
