add service discovery

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/product
 spring.datasource.username=stcomprodadmin
 spring.datasource.password=admin$123
 
-server.port=8090
+server.port=0
 
 server.error.include-exception=false
 server.error.include-message=never
 server.error.include-stacktrace=never
+
+eureka.instance.instanceId=${random.value}
+spring.application.name=product-service
